--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,24 @@
 		<module>bonita-connector-twitter-update-def</module>
 		<module>bonita-connector-twitter-update-impl</module>
 	</modules>
-	
-	
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <tagBase>https://svn.bonitasoft.org/bonita-connectors-6/tags/connectors/bonita-connector-twitter</tagBase>
+                    <preparationGoals>clean install</preparationGoals>
+                    <goals>deploy</goals>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <scm>
+        <developerConnection>scm:svn:https://svn.bonitasoft.org/bonita-connectors-6/trunk/connectors/bonita-connector-twitter</developerConnection>
+    </scm>
+
 </project>
