--- a/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct.properties
+++ b/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct.properties
@@ -1,4 +1,5 @@
 social.category=Social
+twitter.category=Twitter
 connectorDefinitionLabel=Twitter
 connectorDefinitionDescription=Send direct messages
 msg.pageDescription=Send direct messages
