--- a/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status.properties
+++ b/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status.properties
@@ -1,4 +1,5 @@
 social.category=Social
+twitter.category=Twitter
 connectorDefinitionLabel=Twitter
 connectorDefinitionDescription=Update status
 msg.pageDescription=Update \"What\'s happening?\"
