--- a/bonita-connector-twitter-direct-impl/pom.xml
+++ b/bonita-connector-twitter-direct-impl/pom.xml
@@ -1,12 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<artifactId>bonita-connector-twitter</artifactId>
 		<groupId>org.bonitasoft.connectors</groupId>
-		<version>6.1.0-SNAPSHOT</version>
+		<version>6.1.0-rc-01</version>
 	</parent>
 
 	<artifactId>bonita-connector-twitter-direct-impl</artifactId>
