--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<artifactId>bonita-connector-twitter</artifactId>
 	<packaging>pom</packaging>
-	<version>6.1.0-SNAPSHOT</version>
+	<version>6.1.0-rc-01</version>
 
 	<modules>
 		<module>bonita-connector-twitter-common</module>
@@ -36,7 +36,7 @@
     </build>
 
     <scm>
-        <developerConnection>scm:svn:https://svn.bonitasoft.org/bonita-connectors-6/tags/connectors/bonita-connector-twitter</developerConnection>
+        <developerConnection>scm:svn:https://svn.bonitasoft.org/bonita-connectors-6/tags/connectors/bonita-connector-twitter/bonita-connector-twitter-6.1.0-rc-01</developerConnection>
     </scm>
 
 
