--- a/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct.properties
+++ b/bonita-connector-twitter-direct-def/src/main/resources/twitter-direct.properties
@@ -1,7 +1,7 @@
 social.category=Social
 twitter.category=Twitter
-connectorDefinitionLabel=Twitter
-connectorDefinitionDescription=Send direct messages
+connectorDefinitionLabel=Send a Tweet
+connectorDefinitionDescription=Send a tweet message
 msg.pageDescription=Send direct messages
 msg.pageTitle=Enter parameters
 connection.pageTitle=Enter message and recipient
