--- a/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status.properties
+++ b/bonita-connector-twitter-update-def/src/main/resources/twitter-update-status.properties
@@ -1,7 +1,7 @@
 social.category=Social
 twitter.category=Twitter
-connectorDefinitionLabel=Twitter
-connectorDefinitionDescription=Update status
+connectorDefinitionLabel=Update Twitter status
+connectorDefinitionDescription=Update the status of twitter account
 msg.pageDescription=Update \"What\'s happening?\"
 msg.pageTitle=Twitter - Update Status
 connection.pageDescription=Update \"What\'s happening?\"
