--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,8 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:git@github.com:bonitasoft/bonita-connector-twitter.git</developerConnection>
-        <url>scm:git:git@github.com:bonitasoft/bonita-connector-twitter.git</url>
-        <connection>scm:git:git@github.com:bonitasoft/bonita-connector-twitter.git</connection>
+        <developerConnection>scm:git:git://github.com/bonitasoft/bonita-connector-twitter.git</developerConnection>
+        <connection>scm:git:ssh://git@github.com/bonitasoft/bonita-connector-twitter.git</connection>
     </scm>
 
 
