[maven-release-plugin] prepare release bonita-connector-twitter-6.1.0-rc-14

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<artifactId>bonita-connector-twitter</artifactId>
 	<packaging>pom</packaging>
-	<version>6.1.0-SNAPSHOT</version>
+	<version>6.1.0-rc-14</version>
 
 	<modules>
 		<module>bonita-connector-twitter-common</module>
@@ -37,7 +37,7 @@
         <developerConnection>scm:git:git@github.com:bonitasoft/bonita-connector-twitter.git</developerConnection>
         <connection>scm:git:git@github.com:bonitasoft/bonita-connector-twitter.git</connection>
         <url>https://github.com/bonitasoft/bonita-connector-twitter</url>
-      <tag>HEAD</tag>
+      <tag>bonita-connector-twitter-6.1.0-rc-14</tag>
   </scm>
 
 
