--- a/bonita-connector-twitter-direct-def/pom.xml
+++ b/bonita-connector-twitter-direct-def/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>bonita-connector-twitter</artifactId>
 		<groupId>org.bonitasoft.connectors</groupId>
-		<version>6.1.0-SNAPSHOT</version>
+		<version>6.1.0</version>
 	</parent>
 
 	<artifactId>bonita-connector-twitter-direct-def</artifactId>
