--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<artifactId>bonita-connector-twitter</artifactId>
 	<packaging>pom</packaging>
-	<version>6.1.0</version>
+	<version>6.1.0-SNAPSHOT</version>
 
 	<modules>
 		<module>bonita-connector-twitter-common</module>
