--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <developerConnection>scm:git:git@github.com:bonitasoft/bonita-connector-twitter.git</developerConnection>
         <connection>scm:git:git@github.com:bonitasoft/bonita-connector-twitter.git</connection>
         <url>https://github.com/bonitasoft/bonita-connector-twitter</url>
-      <tag>bonita-connector-twitter-6.1.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
 
