--- a/bonita-connector-twitter-direct-impl/pom.xml
+++ b/bonita-connector-twitter-direct-impl/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>bonita-connector-twitter</artifactId>
 		<groupId>org.bonitasoft.connectors</groupId>
-		<version>6.1.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>bonita-connector-twitter-direct-impl</artifactId>
@@ -36,22 +36,29 @@
 	<build>
 		<plugins>
 			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>assemble</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<descriptorRefs>
-								<descriptorRef>connector-assembly</descriptorRef>
-							</descriptorRefs>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+				<dependencies>
+					<dependency>
+						<groupId>org.bonitasoft.connectors</groupId>
+						<artifactId>bonita-connectors-assembly</artifactId>
+						<version>1.0.0</version>
+					</dependency>
+				</dependencies>
+                <executions>
+                    <execution>
+                        <id>assemble</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptorRefs>
+                                <descriptorRef>connector-assembly</descriptorRef>
+                            </descriptorRefs>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 
