--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,11 @@
 	<parent>
 		<artifactId>bonita-connectors</artifactId>
 		<groupId>org.bonitasoft.connectors</groupId>
-		<version>6.1.0</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>bonita-connector-twitter</artifactId>
 	<packaging>pom</packaging>
-	<version>6.1.0-SNAPSHOT</version>
 
 	<modules>
 		<module>bonita-connector-twitter-common</module>
@@ -20,12 +19,27 @@
 		<module>bonita-connector-twitter-update-impl</module>
 	</modules>
 
+	<properties>
+		<bonita.engine.version>6.2.0</bonita.engine.version>
+	</properties>
+	
+	<dependencies>
+		<dependency>
+			<!-- Latest Version of Bonita released, against which the initial development 
+				has been done. -->
+			<!-- The connector will be tested against more recent version -->
+			<artifactId>bonita-common</artifactId>
+			<groupId>org.bonitasoft.engine</groupId>
+			<version>${bonita.engine.version}</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.4</version>
                 <configuration>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
@@ -37,7 +51,6 @@
         <developerConnection>scm:git:git@github.com:bonitasoft/bonita-connector-twitter.git</developerConnection>
         <connection>scm:git:git@github.com:bonitasoft/bonita-connector-twitter.git</connection>
         <url>https://github.com/bonitasoft/bonita-connector-twitter</url>
-      <tag>bonita-connector-twitter-6.1.0</tag>
   </scm>
 
 
