--- a/bonita-connector-twitter-update-impl/pom.xml
+++ b/bonita-connector-twitter-update-impl/pom.xml
@@ -18,12 +18,12 @@
 		<dependency>
 			<artifactId>bonita-connector-twitter-update-def</artifactId>
 			<groupId>org.bonitasoft.connectors</groupId>
-            <version>${project.version}</version>
+            <version>1.0.0</version>
 		</dependency>
 		<dependency>
 			<artifactId>bonita-connector-twitter-common</artifactId>
 			<groupId>org.bonitasoft.connectors</groupId>
-			<version>${project.version}</version>
+			<version>${twitter.common.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -36,27 +36,6 @@
 		<plugins>
 			<plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-				<dependencies>
-					<dependency>
-						<groupId>org.bonitasoft.connectors</groupId>
-						<artifactId>bonita-connectors-assembly</artifactId>
-						<version>1.0.0</version>
-					</dependency>
-				</dependencies>
-                <executions>
-                    <execution>
-                        <id>assemble</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        <configuration>
-                            <descriptorRefs>
-                                <descriptorRef>connector-assembly</descriptorRef>
-                            </descriptorRefs>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
 		</plugins>
 	</build>
