--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -21,8 +22,9 @@
 
 	<properties>
 		<bonita.engine.version>6.2.0</bonita.engine.version>
+		<twitter.common.version>1.0.0</twitter.common.version>
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
 			<!-- Latest Version of Bonita released, against which the initial development 
@@ -35,24 +37,19 @@
 		</dependency>
 	</dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <configuration>
-                    <autoVersionSubmodules>true</autoVersionSubmodules>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 
-    <scm>
-        <developerConnection>scm:git:git@github.com:bonitasoft/bonita-connector-twitter.git</developerConnection>
-        <connection>scm:git:git@github.com:bonitasoft/bonita-connector-twitter.git</connection>
-        <url>https://github.com/bonitasoft/bonita-connector-twitter</url>
-  </scm>
-
-
+	<scm>
+		<developerConnection>scm:git:git@github.com:bonitasoft/bonita-connector-twitter.git</developerConnection>
+		<connection>scm:git:git@github.com:bonitasoft/bonita-connector-twitter.git</connection>
+		<url>https://github.com/bonitasoft/bonita-connector-twitter</url>
+	</scm>
 
 </project>
