--- a/pom.xml
+++ b/pom.xml
@@ -10,20 +10,10 @@
 	</parent>
 
 	<artifactId>bonita-connector-twitter</artifactId>
-	<version>1.1.0</version>
-	<packaging>pom</packaging>
-
-	<modules>
-		<module>bonita-connector-twitter-common</module>
-		<module>bonita-connector-twitter-direct-def</module>
-		<module>bonita-connector-twitter-direct-impl</module>
-		<module>bonita-connector-twitter-update-def</module>
-		<module>bonita-connector-twitter-update-impl</module>
-	</modules>
+	<version>1.2.0-SNAPSHOT</version>
 
 	<properties>
 		<bonita.engine.version>6.3.2</bonita.engine.version>
-		<twitter.common.version>1.1.0</twitter.common.version>
 	</properties>
 
 	<dependencies>
@@ -36,20 +26,98 @@
 			<version>${bonita.engine.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.twitter4j</groupId>
+			<artifactId>twitter4j-core</artifactId>
+			<version>4.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.5.3</version>
+                    <configuration>
+                        <tagNameFormat>@{project.version}</tagNameFormat>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>2.5</version>
+                    <executions>
+                        <execution>
+                            <id>assemble</id>
+                            <phase>none</phase>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>all</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptor>${basedir}/connector-assembly.xml</descriptor>
+                            <appendAssemblyId>true</appendAssemblyId>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>twitter-direct-message</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptor>${basedir}/twitter-direct-message-assembly.xml</descriptor>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>twitter-update-status</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptor>${basedir}/twitter-update-status-assembly.xml</descriptor>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 	<scm>
-		<developerConnection>scm:git:git@github.com:bonitasoft/bonita-connector-twitter.git</developerConnection>
-		<connection>scm:git:git@github.com:bonitasoft/bonita-connector-twitter.git</connection>
+		<developerConnection>scm:git:https://${env.GIT_USERNAME}:${env.GIT_PASSWORD}@github.com/bonitasoft/bonita-connector-twitter.git</developerConnection>
+		<connection>scm:git:https://${env.GIT_USERNAME}:${env.GIT_PASSWORD}@github.com/bonitasoft/bonita-connector-twitter.git</connection>
 		<url>https://github.com/bonitasoft/bonita-connector-twitter</url>
 	</scm>
 
