--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.bonitasoft.connectors</groupId>
 	<artifactId>bonita-connector-twitter</artifactId>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.2.1</version>
 	
     <name>Bonita Twitter Connector</name>
     <description>Connector to interact with Twitter API's from Bonita</description>
