--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
 {
   "name": "bonita-connector-twitter",
-  "version": "1.2.1"
+  "coment": "This json file is required by the generate-changelog-action, do not remove it."
 }
